@@ -14,12 +14,11 @@
     <content url="file://$MODULE_DIR$">
       <sourceFolder url="file://$MODULE_DIR$/resources" isTestSource="false" />
       <sourceFolder url="file://$MODULE_DIR$/src" isTestSource="false" />
-      <sourceFolder url="file://$MODULE_DIR$/test" isTestSource="true" />
       <excludeFolder url="file://$MODULE_DIR$/.clover" />
       <excludeFolder url="file://$MODULE_DIR$/generated_src" />
       <excludeFolder url="file://$MODULE_DIR$/javadoc" />
     </content>
-    <orderEntry type="jdk" jdkName="IDEA IU-123.72" jdkType="IDEA JDK" />
+    <orderEntry type="jdk" jdkName="PyCharm PY-121.378" jdkType="IDEA JDK" />
     <orderEntry type="sourceFolder" forTests="false" />
   </component>
 </module>
