@@ -1,7 +1,7 @@
 <!--
   ~ Copyright 2010 Joachim Ansorg, mail@ansorg-it.com
   ~ File: plugin.xml, Class: plugin.xml
-  ~ Last modified: 2012-12-19
+  ~ Last modified: 2013-01-23
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -18,15 +18,15 @@
 <idea-plugin version="2" url="http://www.ansorg-it.com/en/products_bashsupport.html">
     <name>BashSupport</name>
     <category>Custom Languages</category>
-    <version>1.1beta12</version>
+    <version>1.1beta13</version>
 
     <vendor url="http://www.ansorg-it.com/"
             email="mail@ansorg-it.com"
-            logo="resources/icons/bash-16.png">Joachim Ansorg
+            logo="/icons/bash-16.png">Joachim Ansorg
     </vendor>
 
     <!-- Requires IDEA 12.0 or later -->
-    <idea-version since-build="123.72" until-build="126.999"/>
+    <idea-version since-build="121.0" until-build="126.999"/>
 
     <!-- Mark the plugin as compatible with RubyMine and other products based on the IntelliJ platform -->
     <depends>com.intellij.modules.lang</depends>
@@ -42,13 +42,19 @@
     <html>
        <b>Changes in version 1.1beta12:</b>
        <ul>
+            <li>Compatibility with 121 for PyCharm 2.6 and others</li>
+            <li>Fixed icons to look better with Darcula</li>
+       </ul>
+
+       <b>Changes in version 1.1beta12:</b>
+       <ul>
          <li>Fixed flashing gutter icons</li>
        </ul>
 
        <b>Changes in version 1.1beta11:</b>
        <ul>
          <li>Fixed abstract method errors with IntelliJ IDEA 12</li>
-         <li>Improved parsing of paramter expansion (i.e. the parsing of the / operator)</li>
+         <li>Improved parsing of parameter expansion (i.e. the parsing of the / operator)</li>
          <li>Added parsing of history expansions                                        </li>
          <li>Fixed parsing of single ! tokens                                           </li>
          <li>Fix to allow umlaut characters in command names and arguments.        </li>
