@@ -1,3 +1,7 @@
+2013-01-23:
+ - Compatibility with 121 for PyCharm 2.6 and others
+ - Fixed icons to look better with Darcula
+
 2012-12-19:
  - Fixed flashing gutter bar icons
  - 1.1beta12
